--- a/app/src/main/res/layout/activity_iceland_events.xml
+++ b/app/src/main/res/layout/activity_iceland_events.xml
@@ -12,6 +12,13 @@
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/signInAsIdTextView"
+            android:layout_weight="1"
+            android:textAlignment="viewStart" />
+
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
