--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.hbv2.icelandevents.Activity.LoginActivity"
+    tools:context="com.hbv2.icelandevents.Activity.SignInActivity"
     tools:showIn="@layout/activity_login">
 
     <TextView
@@ -21,7 +21,8 @@
         android:textSize="30sp"
         android:textAlignment="center"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="60dp" />
 
     <Button
         android:text="@string/skip_btn"
@@ -33,46 +34,16 @@
         android:layout_alignStart="@+id/signInBtnActId"
         android:visibility="invisible" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/signInMsgTextView"
-        android:layout_below="@+id/textView"
-        android:layout_marginTop="36dp"
-        android:textSize="18sp"
-        android:layout_alignStart="@+id/textView2"
-        android:layout_alignEnd="@+id/textView2" />
-
-    <TextView
-        android:text="@string/username"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView2"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        android:layout_below="@+id/signInMsgTextView"
-        android:layout_alignStart="@+id/usernameEditText"
-        android:layout_alignEnd="@+id/usernameEditText" />
-
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:ems="10"
         android:id="@+id/usernameEditText"
-        android:layout_below="@+id/textView2"
-        android:layout_alignStart="@+id/passwordEditText" />
-
-    <TextView
-        android:text="@string/password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView3"
-        android:textSize="24sp"
-        android:textAlignment="center"
-        android:layout_below="@+id/usernameEditText"
-        android:layout_alignEnd="@+id/usernameEditText"
-        android:layout_alignStart="@+id/usernameEditText" />
+        android:layout_below="@+id/textView"
+        android:layout_alignStart="@+id/passwordEditText"
+        android:hint="Username"
+        android:textAlignment="center" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -80,8 +51,10 @@
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/passwordEditText"
-        android:layout_below="@+id/textView3"
-        android:layout_centerHorizontal="true" />
+        android:layout_below="@+id/usernameEditText"
+        android:layout_centerHorizontal="true"
+        android:hint="Password"
+        android:textAlignment="center" />
 
     <Button
         android:text="@string/sign_in"
@@ -95,25 +68,24 @@
         android:layout_centerHorizontal="true" />
 
     <Button
-        android:text="@string/back_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/backSignInBtnId"
-        android:textSize="18sp"
-        android:onClick="backSignInBtnId"
-        android:layout_below="@+id/signInBtnActId"
-        android:layout_alignStart="@+id/skipBtnId"
-        android:layout_marginTop="27dp" />
-
-    <Button
         android:text="@string/forgot_password_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="35dp"
         android:id="@+id/forgotPasswBtnId"
         android:onClick="forgotPasswBtn"
-        android:layout_below="@+id/backSignInBtnId"
+        android:layout_below="@+id/signInBtnActId"
         android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/errorMsgTextViewId"
+        android:layout_above="@+id/usernameEditText"
+        android:textSize="18sp"
+        android:textAlignment="center"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
 
 
 </RelativeLayout>
