--- a/app/src/main/res/menu/menu_when_signed_in.xml
+++ b/app/src/main/res/menu/menu_when_signed_in.xml
@@ -2,11 +2,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.hbv2.icelandevents.Activity.IcelandEvents">
+    <item android:title="Sign out"
+        android:orderInCategory="100"
+        app:showAsAction="always"
+        android:id="@+id/menu_sign_out" />
     <item
         android:id="@+id/menu_my_events"
-        android:orderInCategory="100"
+        android:orderInCategory="101"
         android:title="My Events"
-        app:showAsAction="always" />
+        app:showAsAction="always"
+        android:checkable="false" />
 
 
 </menu>
