--- a/app/src/main/res/layout/content_edit_event.xml
+++ b/app/src/main/res/layout/content_edit_event.xml
@@ -102,7 +102,8 @@
         android:layout_marginTop="15dp"
         android:layout_marginStart="40dp"
         android:layout_below="@+id/dateText"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:id="@+id/radioGroup">
 
         <RadioButton
             android:text="Other"
