--- a/app/src/main/res/layout/activity_iceland_events.xml
+++ b/app/src/main/res/layout/activity_iceland_events.xml
@@ -13,6 +13,7 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <TextView
+            android:layout_marginLeft="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/signInAsIdTextView"
