--- a/app/src/main/res/layout/activity_my_event.xml
+++ b/app/src/main/res/layout/activity_my_event.xml
@@ -21,7 +21,8 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_my_event" />
+    <include layout="@layout/content_my_event"
+         />
 
     <ProgressBar
         style="?android:attr/progressBarStyle"
