--- a/app/src/main/res/layout/content_forgot_password.xml
+++ b/app/src/main/res/layout/content_forgot_password.xml
@@ -1,46 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/content_forgot_password"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.hbv2.icelandevents.Activity.ForgotPasswordActivity"
-    tools:showIn="@layout/activity_forgot_password">
+    android:fillViewport="true">
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/content_forgot_password"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context="com.hbv2.icelandevents.Activity.ForgotPasswordActivity"
+        tools:showIn="@layout/activity_forgot_password">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:hint="@string/enter_email_editText"
-        android:textAlignment="center"
-        android:ems="10"
-        android:layout_below="@+id/textView10"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"
-        android:id="@+id/emailText" />
+        <Button
+            android:text="@string/resetPasswordBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="68dp"
+            android:id="@+id/resetPasswBtnId"
+            android:onClick="resetPasswBtnOnClick"
+            android:layout_below="@+id/emailText"
+            android:layout_centerHorizontal="true" />
 
-    <Button
-        android:text="@string/resetPasswordBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="68dp"
-        android:id="@+id/resetPasswBtnId"
-        android:onClick="resetPasswBtnOnClick"
-        android:layout_below="@+id/emailText"
-        android:layout_centerHorizontal="true" />
+        <Button
+            android:text="@string/sign_in"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="49dp"
+            android:id="@+id/signInBtnActForgPId"
+            android:layout_below="@+id/resetPasswBtnId"
+            android:layout_centerHorizontal="true" />
 
-    <Button
-        android:text="@string/sign_in"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="49dp"
-        android:id="@+id/signInBtnActForgPId"
-        android:layout_below="@+id/resetPasswBtnId"
-        android:layout_centerHorizontal="true" />
-</RelativeLayout>
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
+            android:hint="@string/enter_email_editText"
+            android:textAlignment="center"
+            android:ems="10"
+            android:layout_marginTop="84dp"
+            android:id="@+id/emailText"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
+    </RelativeLayout>
+</ScrollView>
