--- a/app/src/main/res/layout/content_reset_password.xml
+++ b/app/src/main/res/layout/content_reset_password.xml
@@ -1,72 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/content_reset_password"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.hbv2.icelandevents.Activity.ResetPasswordActivity"
-    tools:showIn="@layout/activity_reset_password">
+    android:fillViewport="true">
 
-    <Button
-        android:text="Change Password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/confirmPasswText"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="27dp"
-        android:onClick="changePasswOnClick"
-        android:id="@+id/button" />
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/content_reset_password"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context="com.hbv2.icelandevents.Activity.ResetPasswordActivity"
+        tools:showIn="@layout/activity_reset_password">
 
-    <TextView
-        android:text="You have been sent an email \nwith the confirmation code"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="22dp"
-        android:id="@+id/textView11"
-        android:textAlignment="center"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        <Button
+            android:text="Change Password"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/confirmPasswText"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="27dp"
+            android:onClick="changePasswOnClick"
+            android:id="@+id/button" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:hint="Confirmation Code"
-        android:ems="10"
-        android:layout_marginTop="37dp"
-        android:id="@+id/confirmCodeText"
-        android:textAlignment="center"
-        android:layout_below="@+id/textView11"
-        android:layout_centerHorizontal="true" />
+        <TextView
+            android:text="You have been sent an email \nwith the confirmation code"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="22dp"
+            android:id="@+id/textView11"
+            android:textAlignment="center"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:layout_marginTop="32dp"
-        android:id="@+id/newPasswText"
-        android:hint="New Password"
-        android:textAlignment="center"
-        android:layout_below="@+id/confirmCodeText"
-        android:layout_alignStart="@+id/confirmCodeText" />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:hint="Confirmation Code"
+            android:ems="10"
+            android:layout_marginTop="37dp"
+            android:id="@+id/confirmCodeText"
+            android:textAlignment="center"
+            android:layout_below="@+id/textView11"
+            android:layout_centerHorizontal="true" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:layout_marginTop="39dp"
-        android:id="@+id/confirmPasswText"
-        android:hint="Confirm Password"
-        android:textAlignment="center"
-        android:layout_below="@+id/newPasswText"
-        android:layout_alignStart="@+id/newPasswText" />
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:ems="10"
+            android:layout_marginTop="32dp"
+            android:id="@+id/newPasswText"
+            android:hint="New Password"
+            android:textAlignment="center"
+            android:layout_below="@+id/confirmCodeText"
+            android:layout_alignStart="@+id/confirmCodeText" />
 
-</RelativeLayout>
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:ems="10"
+            android:layout_marginTop="39dp"
+            android:id="@+id/confirmPasswText"
+            android:hint="Confirm Password"
+            android:textAlignment="center"
+            android:layout_below="@+id/newPasswText"
+            android:layout_alignStart="@+id/newPasswText" />
+
+    </RelativeLayout>
+</ScrollView>
