--- a/app/src/main/res/layout/event_layout.xml
+++ b/app/src/main/res/layout/event_layout.xml
@@ -15,6 +15,8 @@
     <TextView
         android:text="@string/text_view"
         android:layout_width="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="15dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/eventImageView"
         android:layout_alignParentStart="true"
@@ -25,6 +27,8 @@
     <TextView
         android:text="@string/text_view"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="10dp"
         android:id="@+id/timeTextView"
         android:layout_width="wrap_content"
         android:textSize="18sp"
@@ -33,6 +37,8 @@
 
     <TextView
         android:text="@string/text_view"
+        android:textColor="#000000"
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/nameTextView"
