--- a/app/src/main/res/layout/content_create_event.xml
+++ b/app/src/main/res/layout/content_create_event.xml
@@ -46,7 +46,7 @@
                 android:ems="10"
                 android:id="@+id/locationText"
                 android:textAlignment="center"
-                android:layout_marginTop="14dp"
+                android:layout_marginTop="10dp"
                 android:layout_below="@+id/eventNameText"
                 android:layout_alignStart="@+id/eventNameText" />
 
@@ -60,7 +60,7 @@
                 android:textAlignment="center"
                 android:layout_below="@+id/timeText"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="10dp"
                 android:inputType="date"
                 android:focusable="false"
                 />
@@ -74,7 +74,7 @@
                 android:ems="10"
                 android:id="@+id/timeText"
                 android:textAlignment="center"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:layout_below="@+id/descriptionText"
                 android:layout_alignStart="@+id/dateText"
                 android:focusable="false" />
@@ -82,14 +82,24 @@
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName"
+                android:inputType="textMultiLine"
                 android:hint="Description"
                 android:ems="10"
                 android:id="@+id/descriptionText"
                 android:textAlignment="center"
-                android:layout_marginTop="19dp"
+                android:maxLength="250"
+                android:lines="5"
+                android:scrollbars="vertical"
+                android:gravity="top|left"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
                 android:layout_below="@+id/locationText"
-                android:layout_alignStart="@+id/locationText" />
+                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true" >
+                <requestFocus />
+            </EditText>
+
 
             <TextView
                 android:layout_width="wrap_content"
@@ -103,7 +113,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginStart="40dp"
                 android:layout_below="@+id/dateText"
                 android:layout_alignParentStart="true"
@@ -115,6 +125,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/radioBtnOther"
                     android:checked="true"
+                    android:onClick="onRadioButtonClicked"
                     />
 
                 <RadioButton
@@ -122,6 +133,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/radioBtnRock"
+                    android:onClick="onRadioButtonClicked"
                     />
 
                 <RadioButton
@@ -129,6 +141,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/radioBtnPop"
+                    android:onClick="onRadioButtonClicked"
                     />
 
                 <RadioButton
@@ -136,6 +149,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/radioBtnJazz"
+                    android:onClick="onRadioButtonClicked"
                     />
             </RadioGroup>
 
