--- a/app/src/main/res/layout/content_edit_event.xml
+++ b/app/src/main/res/layout/content_edit_event.xml
@@ -36,7 +36,9 @@
                 android:id="@+id/nameText"
                 android:textAlignment="center"
                 android:layout_alignParentTop="true"
-                android:layout_alignStart="@+id/timeText" />
+                android:layout_alignStart="@+id/timeText">
+                <requestFocus />
+            </EditText>
 
             <EditText
                 android:layout_width="wrap_content"
